local-installation/k8-local/indexify-minilm-l6-extractor.yml
apiVersion: v1
kind: Service
metadata:
  namespace: indexify
  name: minilm-l6-extractor-service
spec:
  type: NodePort
  ports:
  - port: 9501
    protocol: TCP
  selector:
    app: minilm-l6-extractor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: indexify
  name: minilm-l6-extractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minilm-l6-extractor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minilm-l6-extractor
    spec:
      containers:
      - name: minilm-l6-extractor
        command: ["indexify-extractor"]
        args:
        - join-server
        - --coordinator-addr
        - coordinator-service.indexify.svc.cluster.local:8950
        - --ingestion-addr
        - indexify-service.indexify.svc.cluster.local:8900
        - --advertise-addr
        - minilm-l6-extractor-service.indexify.svc.cluster.local:9501
        - --listen-port
        - "9501"
        image: tensorlake/minilm-l6
      restartPolicy: Always
