local-installation/k8-local/indexify-server.yml
apiVersion: v1
kind: Service
metadata:
  namespace: indexify
  name: indexify-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8900
    targetPort: 8900
  selector:
    app: indexify
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexify
  namespace: indexify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexify
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: indexify
    spec:
      containers:
      - name: indexify
        command: ["indexify"]
        args:
        - server
        - --config-path
        - ./config/indexify.yaml
        image: tensorlake/indexify
        ports:
        - containerPort: 8900
        volumeMounts:
        - mountPath: /indexify/config
          name: config
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: indexify-configmap
          items:
          - key: "sample_config.yaml"
            path: "indexify.yaml"
