local-installation/k8-local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: indexify
  name: ingress-indexify
  annotations:
    nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # add ', {"HTTPS":443}' to array for ssl setup
    nginx.ingress.kubernetes.io/rewrite-target: /
    # alb.ingress.kubernetes.io/ssl-redirect: "443"
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/certificate-arn: add ssl certificate arn
spec:
  ingressClassName: nginx
  rules:
  - host: indexify.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: indexify-service
            port:
              number: 8900
